functional webpage, add function to display list items on html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         <label for="item">Add what I need to Do</label>
                         <input type="text" name="list-item" id="list-input">
                     </div>
+                    <button type="submit">Add Item</button>
+                    <br>
+                    <br>
                 </form>       
                 </div>
             </div>
